selfhost/tests/neg/arity.ail
// EXPECT: function 'f' expects 2 arguments, got 1
fn f(a:i64, b:i64) -> i64 { a + b }
println(f(1))
